regression-tests/test-results/gcc-14-c++2b/pure2-type-safety-1.cpp.output
pure2-type-safety-1.cpp2: In instantiation of ‘void test_generic(const auto:107&, const auto:108&) [with auto:107 = double; auto:108 = char [7]]’:
pure2-type-safety-1.cpp2:8:17:   required from here
pure2-type-safety-1.cpp2:26:10: error: call of overloaded ‘print(std::__cxx11::basic_string<char>, std::integral_constant<bool, false>)’ is ambiguous
In file included from ../../../include/cpp2util.h:190,
                 from pure2-type-safety-1.cpp:7:
/usr/include/c++/14/print:115:5: note: candidate: ‘void std::print(format_string<_Args ...>, _Args&& ...) [with _Args = {integral_constant<bool, false>}; format_string<_Args ...> = basic_format_string<char, integral_constant<bool, false> >]’
  115 |     print(format_string<_Args...> __fmt, _Args&&... __args)
      |     ^~~~~
pure2-type-safety-1.cpp2:29:6: note: candidate: ‘void print(cpp2::impl::in<std::__cxx11::basic_string<char> >, cpp2::impl::in<bool>)’
pure2-type-safety-1.cpp2: In instantiation of ‘void test_generic(const auto:107&, const auto:108&) [with auto:107 = int; auto:108 = char [4]]’:
pure2-type-safety-1.cpp2:18:17:   required from here
pure2-type-safety-1.cpp2:26:10: error: call of overloaded ‘print(std::__cxx11::basic_string<char>, std::integral_constant<bool, true>)’ is ambiguous
/usr/include/c++/14/print:115:5: note: candidate: ‘void std::print(format_string<_Args ...>, _Args&& ...) [with _Args = {integral_constant<bool, true>}; format_string<_Args ...> = basic_format_string<char, integral_constant<bool, true> >]’
  115 |     print(format_string<_Args...> __fmt, _Args&&... __args)
      |     ^~~~~
pure2-type-safety-1.cpp2:29:6: note: candidate: ‘void print(cpp2::impl::in<std::__cxx11::basic_string<char> >, cpp2::impl::in<bool>)’
